fix folder box overflow

--- a/src/web/static/main.css
+++ b/src/web/static/main.css
@@ -68,6 +68,7 @@ ul {
 
 .child_outer {
     margin: 2px;
+    overflow: hidden;
 }
 
 .child_content {
@@ -75,7 +76,6 @@ ul {
     background-color: #f1f1f1;
     border: 1px solid #d3d3d3;
     height: 250px;
-    overflow: scroll;
 }
 
 .child_header {
